fix (modal-level): unsuck it on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -83,3 +83,8 @@ div:has(> input[type="range"]) ~ .form-text.input-helper {
     margin-bottom: 0.5rem;
     margin-top: 0.75rem;
 }
+
+.modal-level-type {
+    font-size: 1.25rem;
+    line-height: 1.15;
+}
